--- a/HTML/about.html
+++ b/HTML/about.html
@@ -13,7 +13,7 @@
 
   <!-- AOS Animation Library -->
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js" defer></script>
 
   <script src="../JS/cart.js" defer></script>
 
@@ -29,7 +29,7 @@
   <header class="bg-white shadow-md sticky top-0 z-50">
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
       <h1 class="text-4xl font-extrabold bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500 text-transparent bg-clip-text animate-pulse tracking-widest font-poppins">
-        VD
+        V
       </h1>
       <nav class="space-x-4">
         <a href="../index.html" class="hover:text-indigo-500">Home</a>
@@ -37,39 +37,77 @@
         <a href="about.html" class="hover:text-indigo-500 font-semibold">About</a>
         <a href="contact.html" class="hover:text-indigo-500">Contact</a>
         <a href="cart.html" class="hover:text-indigo-500">Cart 🛒</a>
+        <a href="login.html" class="hover:text-indigo-500">Login</a>
+        <a href="signup.html" class="hover:text-indigo-500 font-semibold">Sign Up</a>
       </nav>
     </div>
   </header>
 
   <!-- Main content -->
   <main class="flex-grow bg-white p-8 rounded-lg shadow-md py-16 px-4 w-full">
-    <div class="max-w-3xl mx-auto space-y-10">
+    <div class="max-w-3xl mx-auto space-y-16">
 
-      <div data-aos="fade-up">
-        <h2 class="text-4xl font-bold text-center text-indigo-700 mb-6">About VD</h2>
-        <p class="text-lg leading-relaxed text-gray-700 mb-6">
+      <section data-aos="fade-up" class="space-y-6">
+        <h2 class="text-9xl font-bold text-center text-blackmb-6">V</h2>
+        <p class="text-lg leading-relaxed text-gray-700">
           VI...dev was founded with the mission to make online shopping effortless, affordable, and enjoyable.
           Our team is passionate about bringing you the best selection of products, from electronics to apparel, with fast delivery and excellent customer service.
         </p>
-        <p class="text-lg leading-relaxed text-gray-700 mb-6">
+        <p class="text-lg leading-relaxed text-gray-700">
           We believe in quality, transparency, and building lasting relationships with our customers.
           Whether you're looking for the latest gadgets or everyday essentials, ShopEase is here to help you find what you love.
         </p>
         <p class="text-lg leading-relaxed text-gray-700">
           Thank you for choosing ShopEase. We look forward to serving you!
         </p>
-      </div>
+      </section>
+
+      <section data-aos="fade-up" class="space-y-6">
+        <h3 class="text-3xl font-semibold text-indigo-600 mb-4">Our Story</h3>
+        <p class="text-gray-700 leading-relaxed">
+          Since our inception in 2021, VD has grown from a small startup into a trusted e-commerce platform serving thousands of customers worldwide.
+          Our founders envisioned a marketplace that combines ease of use with a broad product range, and that vision continues to guide us every day.
+        </p>
+        <img 
+          src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=800&q=80" 
+          alt="Team collaboration" 
+          class="w-full rounded-lg shadow-md mt-6"
+          data-aos="zoom-in"
+          data-aos-delay="200"
+        />
+        <p class="text-gray-700 leading-relaxed mt-4">
+          Through innovation and a customer-first approach, we strive to continuously improve and expand our offerings.
+        </p>
+      </section>
+
+      <section data-aos="fade-up" class="bg-indigo-50 p-6 rounded-lg shadow-sm space-y-6">
+        <h3 class="text-3xl font-semibold text-indigo-600 mb-4">Meet Our Team</h3>
+        <p class="text-gray-700 leading-relaxed">
+          Behind VD is a dedicated group of passionate individuals who work tirelessly to bring you the best online shopping experience.
+          From developers to customer support, each member shares the vision of making VD a place you love to shop.
+        </p>
+        <img
+          src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?auto=format&fit=crop&w=800&q=80"
+          alt="Team members"
+          class="w-full rounded-lg shadow-md mt-6"
+          data-aos="fade-right"
+          data-aos-delay="300"
+        />
+        <p class="text-gray-700 leading-relaxed">
+          We believe a great team creates great products and experiences.
+        </p>
+      </section>
 
       <!-- Contact Information -->
-      <div data-aos="zoom-in" class="bg-gray-100 p-6 rounded-lg shadow-sm">
-        <h3 class="text-2xl font-semibold text-indigo-600 mb-4">Contact Information</h3>
+      <section data-aos="zoom-in" class="bg-gray-100 p-6 rounded-lg shadow-sm space-y-4">
+        <h3 class="text-2xl font-semibold text-black mb-4">Contact Information</h3>
         <ul class="space-y-2 text-gray-700">
-          <li><strong>CEO:</strong> DEV</li>
-          <li><strong>Email:</strong> <a href="mailto:devk81820@gmail.com" class="text-indigo-600 hover:underline">devk81820@gmail.com</a></li>
-          <li><strong>Phone:</strong> +91-6200765387</li>
-          <li><strong>Address:</strong> 123, College road, Bundu, Jharkhand, 835204</li>
+          <li><strong>CEO:</strong>Vibsss</li>
+          <li><strong>Email:</strong> <a href="mailto:dv@gmail.com" class="text-indigo-600 hover:underline">dv@gmail.com</a></li>
+          <li><strong>Phone:</strong> +91-6200000000</li>
+          <li><strong>Address:</strong> 123, 6th A main road BTM 4th satge Bangalore</li>
         </ul>
-      </div>
+      </section>
 
     </div>
   </main>
@@ -83,9 +121,11 @@
 
   <!-- Initialize AOS -->
   <script>
-    AOS.init({
-      duration: 1000,
-      once: true,
+    document.addEventListener('DOMContentLoaded', () => {
+      AOS.init({
+        duration: 1000,
+        once: true,
+      });
     });
   </script>
 </body>
