--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -6,6 +6,7 @@
   <title>VD | Cart</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="../JS/cart.js" defer></script>
+  <link rel="stylesheet" href="../CSS/signup.css" />
 </head>
 <body class="bg-gray-50 text-gray-800 flex flex-col min-h-screen">
 
@@ -13,7 +14,7 @@
   <header class="bg-white shadow-md sticky top-0 z-50">
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
       <h1 class="text-4xl font-extrabold bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500 text-transparent bg-clip-text animate-pulse tracking-widest font-poppins">
-        VD
+        V
       </h1>
       <nav class="space-x-4">
         <a href="../index.html" class="hover:text-indigo-500">Home</a>
@@ -22,20 +23,31 @@
         <a href="contact.html" class="hover:text-indigo-500">Contact</a>
         <a href="cart.html" class="hover:text-indigo-500 font-semibold">
           Cart 🛒 <span id="cart-count" class="ml-1 font-bold"></span>
+          <a href="login.html" class="hover:text-indigo-500">Login</a>
+        <a href="signup.html" class="hover:text-indigo-500 font-semibold">Sign Up</a>
         </a>
       </nav>
     </div>
   </header>
-
+  <div class="animate-fade-in">
   <!-- Cart Content -->
   <main class="flex-grow max-w-4xl mx-auto bg-white p-8 rounded-lg shadow-md py-16 px-4 w-full">
-    <h2 class="text-3xl font-bold mb-8 text-indigo-700">Your Shopping Cart</h2>
+    <h2 class="text-3xl font-bold mb-8 text-black">Your Shopping Cart</h2>
     <div id="cart-items"></div>
 
     <div class="mt-8 text-right font-semibold text-lg">
       Total: <span id="total-price">$0.00</span>
     </div>
   </main>
+
+<!-- Payment CTA (initially hidden) -->
+<div id="payment-button" class="mt-10 text-center hidden">
+  <a href="payment.html"
+    class="inline-block bg-gradient-to-r from-indigo-500 to-purple-600 text-white px-6 py-3 rounded-lg shadow-lg hover:scale-105 transform transition duration-300 font-semibold text-lg">
+    Proceed to Payment 💳
+  </a>
+</div>
+</div>
 
   <!-- Footer -->
   <footer class="bg-gray-800 text-white py-6 mt-auto">
