--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -7,14 +7,41 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="../JS/cart.js" defer></script>
 
+  <style>
+    /* Background image with slow zoom animation */
+    body {
+      background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1600&q=80') no-repeat center center fixed;
+      background-size: cover;
+      animation: zoomBackground 30s ease-in-out infinite alternate;
+    }
+
+    @keyframes zoomBackground {
+      0% {
+        background-size: 100% auto;
+      }
+      100% {
+        background-size: 110% auto;
+      }
+    }
+
+    /* Overlay to dim background for readability */
+    .overlay {
+      background-color: rgba(255, 255, 255, 0.85);
+      position: fixed;
+      inset: 0;
+      z-index: -1;
+    }
+  </style>
 </head>
-<body class="bg-gray-50 text-gray-800 flex flex-col min-h-screen">
+<body class="bg-gray-50 text-gray-800 flex flex-col min-h-screen relative">
+
+  <div class="overlay"></div>
 
   <!-- Header -->
-  <header class="bg-white shadow-md sticky top-0 z-50">
+  <header class="bg-white bg-opacity-90 shadow-md sticky top-0 z-50">
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
       <h1 class="text-4xl font-extrabold bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500 text-transparent bg-clip-text animate-pulse tracking-widest font-poppins">
-        VD
+        V
       </h1>
       <nav class="space-x-4">
         <a href="../index.html" class="hover:text-indigo-500">Home</a>
@@ -22,15 +49,18 @@
         <a href="about.html" class="hover:text-indigo-500">About</a>
         <a href="contact.html" class="hover:text-indigo-500 font-semibold">Contact</a>
         <a href="cart.html" class="hover:text-indigo-500">Cart 🛒</a>
+        <a href="login.html" class="hover:text-indigo-500">Login</a>
+        <a href="signup.html" class="hover:text-indigo-500 font-semibold">Sign Up</a>
       </nav>
     </div>
   </header>
 
-  <main class="flex-grow w-full bg-white py-16 px-4">
+  <main class="flex-grow w-full py-16 px-4">
     <!-- Contact Form Section -->
-    <section class="py-16 px-4 bg-indigo-100">
-      <div class="max-w-3xl mx-auto bg-white p-8 rounded-lg shadow-md">
-        <h2 class="text-3xl font-bold mb-6 text-center text-indigo-700">Get in Touch</h2>
+    <section class="max-w-3xl mx-auto bg-white bg-opacity-95 p-8 rounded-lg shadow-md space-y-10">
+      
+      <div>
+        <h2 class="text-4xl font-bold mb-6 text-center text-black">Get in Touch</h2>
         <form action="#" method="POST" class="space-y-6">
           <div>
             <label class="block font-medium mb-1" for="name">Name</label>
@@ -53,11 +83,38 @@
           </button>
         </form>
       </div>
+
+      <!-- Additional Contact Info -->
+      <div class="text-center text-gray-700 space-y-4">
+        <h3 class="text-2xl font-semibold text-indigo-600">Other Ways to Reach Us</h3>
+        <p>
+          Phone: <a href="tel:+916200765387" class="text-indigo-500 hover:underline">+91-6200765387</a><br />
+          Email: <a href="mailto:devk81820@gmail.com" class="text-indigo-500 hover:underline">devk81820@gmail.com</a><br />
+          Address: 123, College Road, Bundu, Jharkhand, 835204
+        </p>
+        <div class="flex justify-center space-x-6 mt-4">
+          <a href="#" aria-label="Facebook" class="text-indigo-600 hover:text-indigo-800 text-3xl">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" class="w-8 h-8">
+              <path d="M22.675 0h-21.35C.6 0 0 .6 0 1.325v21.351C0 23.4.6 24 1.325 24H12v-9.294H9.294v-3.618H12V8.413c0-2.675 1.625-4.134 4.006-4.134 1.14 0 2.122.085 2.406.123v2.79h-1.65c-1.294 0-1.545.616-1.545 1.52v1.992h3.09l-.402 3.618H15.21V24h7.465c.725 0 1.325-.6 1.325-1.324V1.325C24 .6 23.4 0 22.675 0z" />
+            </svg>
+          </a>
+          <a href="#" aria-label="Twitter" class="text-indigo-600 hover:text-indigo-800 text-3xl">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" class="w-8 h-8">
+              <path d="M24 4.557a9.93 9.93 0 01-2.828.775 4.93 4.93 0 002.165-2.724 9.865 9.865 0 01-3.127 1.195 4.916 4.916 0 00-8.37 4.482A13.942 13.942 0 011.671 3.149 4.916 4.916 0 003.195 9.72a4.903 4.903 0 01-2.229-.616c-.054 2.28 1.581 4.415 3.95 4.89a4.935 4.935 0 01-2.224.085c.626 1.956 2.444 3.377 4.6 3.418a9.874 9.874 0 01-6.102 2.105c-.397 0-.79-.023-1.175-.068a13.94 13.94 0 007.557 2.213c9.054 0 14.003-7.5 14.003-14.002 0-.213 0-.426-.015-.637A10.012 10.012 0 0024 4.557z" />
+            </svg>
+          </a>
+          <a href="#" aria-label="Instagram" class="text-indigo-600 hover:text-indigo-800 text-3xl">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" class="w-8 h-8">
+              <path d="M7.75 2A5.75 5.75 0 002 7.75v8.5A5.75 5.75 0 007.75 22h8.5A5.75 5.75 0 0022 16.25v-8.5A5.75 5.75 0 0016.25 2h-8.5zm0 1.5h8.5a4.25 4.25 0 014.25 4.25v8.5a4.25 4.25 0 01-4.25 4.25h-8.5a4.25 4.25 0 01-4.25-4.25v-8.5a4.25 4.25 0 014.25-4.25zM12 7a5 5 0 100 10 5 5 0 000-10zm0 1.5a3.5 3.5 0 110 7 3.5 3.5 0 010-7zm4.75-.75a1.25 1.25 0 11-2.5 0 1.25 1.25 0 012.5 0z" />
+            </svg>
+          </a>
+        </div>
+      </div>
     </section>
   </main>
 
   <!-- Footer -->
-  <footer class="bg-gray-800 text-white py-6">
+  <footer class="bg-gray-800 bg-opacity-90 text-white py-6 mt-auto">
     <div class="max-w-7xl mx-auto px-4 text-center">
       &copy; 2025 ShopEase. All rights reserved.
     </div>
