--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -18,7 +18,7 @@
   <header class="bg-white shadow-md sticky top-0 z-50">
     <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
       <h1 class="text-4xl font-extrabold bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500 text-transparent bg-clip-text animate-pulse tracking-widest font-poppins">
-        VD
+        V
       </h1>
       <nav class="space-x-4">
         <a href="../index.html" class="hover:text-indigo-500">Home</a>
@@ -26,13 +26,15 @@
         <a href="about.html" class="hover:text-indigo-500">About</a>
         <a href="contact.html" class="hover:text-indigo-500">Contact</a>
         <a href="cart.html" class="hover:text-indigo-500">Cart 🛒 <span id="cart-count" class="ml-1 font-bold"></span></a>
+        <a href="login.html" class="hover:text-indigo-500">Login</a>
+        <a href="signup.html" class="hover:text-indigo-500 font-semibold">Sign Up</a>
       </nav>
     </div>
   </header>
 
   <!-- Main Content -->
   <main class="flex-grow max-w-7xl mx-auto p-8 py-16">
-    <h2 class="text-3xl font-bold mb-8 text-indigo-700 text-center">Shop Our Products</h2>
+    <h2 class="text-5xl font-bold mb-8 text-black text-center">Shop Our Products</h2>
 
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
       <!-- Product 1 -->
