--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -36,7 +36,7 @@
     <div id="cart-items"></div>
 
     <div class="mt-8 text-right font-semibold text-lg">
-      Total: <span id="total-price">$0.00</span>
+      Total: <span id="total-price">₹0.00</span>
     </div>
   </main>
 
