--- a/HTML/payment.html
+++ b/HTML/payment.html
@@ -52,7 +52,7 @@
       </div>
       <div>
         <label class="block mb-1 font-semibold text-gray-700">Amount</label>
-        <input id="amount" type="text" class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-500" value="$0.00" readonly>
+        <input id="amount" type="text" class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-500" value="₹0.00" readonly>
       </div>
 
       <button type="submit" class="w-full bg-indigo-600 text-white py-3 rounded font-semibold hover:bg-indigo-700 transition duration-300 transform hover:scale-105">
