--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </div>
           <div class="p-4">
             <h4 class="text-lg font-semibold group-hover:text-indigo-600 transition-colors">Kurti</h4>
-            <p class="text-gray-600">$99.99</p>
+            <p class="text-gray-600">₹99.99</p>
             <button
               class="mt-2 bg-indigo-500 text-white px-4 py-2 rounded hover:bg-indigo-600 transition duration-300 ease-in-out"
               onclick='addToCart({"id": "p1", "name": "Kurti P1", "price": 99.99})'
@@ -97,7 +97,7 @@
           </div>
           <div class="p-4">
             <h4 class="text-lg font-semibold group-hover:text-indigo-600 transition-colors">Kurti</h4>
-            <p class="text-gray-600">$29.99</p>
+            <p class="text-gray-600">₹29.99</p>
             <button
               class="mt-2 bg-indigo-500 text-white px-4 py-2 rounded hover:bg-indigo-600 transition duration-300 ease-in-out"
               onclick='addToCart({"id": "p2", "name": "Kurti P2", "price": 29.99})'
@@ -121,7 +121,7 @@
           </div>
           <div class="p-4">
             <h4 class="text-lg font-semibold group-hover:text-indigo-600 transition-colors">Kurti</h4>
-            <p class="text-gray-600">$829.99</p>
+            <p class="text-gray-600">₹829.99</p>
             <button
               class="mt-2 bg-indigo-500 text-white px-4 py-2 rounded hover:bg-indigo-600 transition duration-300 ease-in-out"
               onclick='addToCart({"id": "p3", "name": "Kurti P3", "price": 829.99})'
